[UPS] started a browser for the UPS API

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,6 +9,10 @@
 
     <php>
         <!-- <server name="BUZZ_DIR" value="/path/to/buzz/lib" /> -->
+        <!-- <server name="UPS_ACCESS_LICENSE_NUMBER" value="" /> -->
+        <!-- <server name="UPS_USER_ID" value="" /> -->
+        <!-- <server name="UPS_PASSWORD" value="" /> -->
+        <!-- <server name="UPS_SHIPPER_NUMBER" value="" /> -->
     </php>
 
     <filter>
